<?xml version="1.0" encoding="utf-8"?>



<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactDetail" android:layout_margin="20dp"
        android:id="@+id/detailScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/detailContraintLayout">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/detailNameEditTextView"
                android:ems="10"
                android:id="@+id/detailNameEditTextView"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/detailNameEditTextHint"
                android:autofillHints=".AUTOFILL_HINT_PERSON_NAME"/>
        <TextView
                android:text="@string/detailNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/detailNameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailNameEditTextView"
                app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/detailPhoneEditTextView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/detailNameTextView" app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/detailPhoneEditTextHint" android:autofillHints=".AUTOFILL_HINT_PHONE"/>

        <TextView
                android:text="@string/detailPhoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/detailPhoneTextView" android:gravity="start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/detailCallButton"
                app:layout_constraintEnd_toStartOf="@+id/detailCallButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"/>
        <Button
                android:text="@string/detailCallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/detailCallButton"
                app:layout_constraintTop_toBottomOf="@+id/detailPhoneEditTextView"
                app:layout_constraintStart_toEndOf="@+id/detailPhoneTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/detailEmailEditTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailCallButton"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/detailEmailAddressEditTextHint"
                android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS" android:layout_marginTop="10dp"/>
        <TextView
                android:text="@string/detailEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/detailEmailTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/detailEmailButton"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/detailEmailButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/detailAddressEditTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailEmailButton" app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/detailAddressEditTextHint" android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS"
                android:layout_marginTop="10dp"/>
        <TextView
                android:text="@string/detailAddressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/detailAddressTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailAddressEditTextView"
                app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.gms.maps.MapView
                android:layout_width="0dp"
                android:layout_height="300sp" android:id="@+id/detailMapView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/detailAddressTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:uiScrollGestures="false"/>
        <TextView
                android:text="@string/detailNotesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/detailNotesTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/detailNotesEditTextView"/>
        <Button
                android:text="@string/detailUpdateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/detailUpdateButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/detailNotesTextView" android:layout_marginTop="10dp"/>
        <Button
                android:text="@string/detailEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/detailEmailButton"
                app:layout_constraintTop_toBottomOf="@+id/detailEmailEditTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detailEmailTextView"
                app:layout_constraintHorizontal_bias="0.5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/detailNotesEditTextView"
                android:ems="10"
                android:id="@+id/detailNotesEditTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/detailMapView"
                android:layout_marginTop="10dp" android:autofillHints="notes"
                android:hint="@string/detailNotesEditTextHint"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->